// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete.md with options: {"type":{"text":false}}: delete.md 1`] = `
~~abc123~~

~~我a我1~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~abc123~~

~~我a我1~~

`;

exports[`delete.md with options: undefined: delete.md 1`] = `
~~abc123~~

~~我a我1~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~abc123~~

~~我 a 我 1~~

`;
